# FTorch

./: .gitignore  CMakeLists.txt
.github/workflows/: test_suite.yml
Torchscripts/: NNetwork_template.py  NNetwork_template_script.py  NNetwork_template_single.py  check_offline.py
Torchscripts/old/: NNetwork_template.py
examples/1_SimpleNet/: CMakeLists.txt  pt2ts.py
examples/2_ResNet18/: CMakeLists.txt  resnet_infer_fortran.f90  resnet_infer_python.py
src/: CMakeLists.txt
weights/: NetworkA_weights_SICpSSTpVelpHIpTSpSSS_SPEAR.nc  NetworkB_weights_SICpSSTpVelpHIpTSpSSS_SPEAR.nc  Torch_to_netcdf.py
